--- a/landing.css
+++ b/landing.css
@@ -1,9 +1,10 @@
 body {
     background-color:none;
+    width:100%;
 }
 #main{
     border:none;
-    width: auto;
+    width: 100%;
     background-color:rgb(63, 151, 63);
     height:80px;
 
@@ -14,7 +15,7 @@ body {
     height:40px;
     width:600px;
     text-align: center;
-    position:relative;
+    position:absolute;
     font-family: 'Times New Roman', Times, serif;
     font-size: 1em;
     border:none;
@@ -22,7 +23,6 @@ body {
 .submit{
     height:40px;
     margin-left:100px
-    padding:3px;
     position:fixed;
     margin-top:20px;
     border: none;
@@ -51,47 +51,4 @@ body {
     background-color: #3e8e41;
   }
   
-  /* The search field */
-  #myInput {
-    box-sizing: border-box;
-    background-image: url('searchicon.png');
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-  }
   
-  /* The search field when it gets focus/clicked on */
-  #myInput:focus {outline: 3px solid #ddd;}
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display:block;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    border: 1px solid #ddd;
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
