--- a/landing.css
+++ b/landing.css
@@ -20,10 +20,10 @@ body {
     border:none;
 }
 .submit{
-    height:40px;
-    margin-left:100px
+    height:42px;
+    margin-left:0px;
     padding:3px;
-    position:fixed;
+    position:relative;
     margin-top:20px;
     border: none;
     background-color:rgb(20, 230, 18);
@@ -46,52 +46,29 @@ body {
     cursor: pointer;
   }
   
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-  }
+ 
   
-  /* The search field */
-  #myInput {
-    box-sizing: border-box;
-    background-image: url('searchicon.png');
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  /* The search field when it gets focus/clicked on */
-  #myInput:focus {outline: 3px solid #ddd;}
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display:block;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    border: 1px solid #ddd;
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+ .landing{
+   display:flex;
+ }
+ #colorlist{
+   height:70px;
+   width:70px;
+ }
+ #mycolor{
+   height: 70px;
+   width: 70px;
+   border:3px solid black;
+ }
+ li{
+   list-style: none;
+ }
+ #major{
+   border:none;
+   background-color:rgb(220,220,220);
+   color:black;
+   width: 195px;
+   height: 100px;
+   overflow: scroll;
+   margin-left:70px;
+ }
